@@ -199,7 +199,7 @@ module ActiveRecord
             case field_type
             when /INTEGER/
                :integer
-            when /SMALLINT/
+            when /TINYINT/
                :boolean
             when /BOOLEAN/
                :boolean
@@ -208,7 +208,7 @@ module ActiveRecord
             when /CHAR/
                :string
             when /DATE/
-               :date
+               :datetime
             end
          end
 
@@ -227,7 +227,7 @@ module ActiveRecord
             when /time/i
                :time
             when /date/i
-               :date
+               :datetime
             when /clob/i, /text/i
                :text
             when /blob/i, /binary/i
@@ -260,8 +260,7 @@ module ActiveRecord
          def native_database_types
             complete_trace(" in native_database_type ")
             {
-               #:primary_key => "TABLE_KEY NOT NULL with system_maintained",
-               :primary_key => "integer NOT NULL",
+               :primary_key => "integer NOT NULL PRIMARY KEY",
                :string      => { :name => "varchar(255)"},
                :text        => { :name => "text" },
                :integer     => { :name => "integer" },
@@ -271,7 +270,7 @@ module ActiveRecord
                :time        => { :name => "time" },
                :date        => { :name => "date" },
                :binary      => { :name => "blob" },
-               :boolean     => { :name => "smallint", :limit => 1 }
+               :boolean     => { :name => "tinyint" }
             }
          end
 
@@ -290,7 +289,7 @@ module ActiveRecord
          end
 
          def supports_migrations?
-            false
+            true
          end
 
          def prefetch_primary_key?(table_name = nil)
@@ -363,7 +362,7 @@ module ActiveRecord
          #end
 
          def quote(value, column = nil)
-            complete_trace(" in quote(#{value}, #{column}) ")
+            complete_trace(" in quote() ")
             if column
                complete_trace(" column= name::#{column.name}, @sql_type::#{column.sql_type}, @type=>#{value.class} ")
             end
@@ -411,6 +410,63 @@ module ActiveRecord
 
 
          # DATABASE STATEMENTS ======================================
+
+         # Ingres does not support ALTER TABLE RENAME COL so we have to do it another way
+         #
+         # !!!!Note!!!!
+         # This method only handles tables and primary keys as generated by ActiveRecord
+         # If someone has modified the table structure or added additional indexes these 
+         # will be lost.
+         # TODO - handle secondary indexes and alternate base table structures
+         def rename_column(table_name, column_name, new_column_name) #:nodoc:
+           table_columns = columns(table_name)
+           #Strip the leading :
+           old_column_name = "#{column_name}"
+           no_table_columns = table_columns.size
+           count = 0
+           column_sql = ""
+           table_columns.each do |col|
+             count = count + 1 
+             if col.name == old_column_name then
+               column_sql << " #{col.name} as #{new_column_name}"
+             else
+               column_sql << " #{col.name}"
+             end
+             if (count < no_table_columns) then
+               column_sql << ", " 
+             end
+           end
+           pk_col = get_primary_key(table_name)
+           # Backup the current table renaming the chosen column
+           execute( <<-SQL_COPY, nil)
+             DECLARE GLOBAL TEMPORARY TABLE session.table_copy AS
+               SELECT #{column_sql}
+               FROM #{table_name}
+             ON COMMIT PRESERVE ROWS
+             WITH NORECOVERY
+           SQL_COPY
+
+           #Drop table_name
+           execute( <<-SQL_COPY, nil)
+             DROP TABLE #{table_name}
+           SQL_COPY
+
+           #Re-create table_name based on session.table_copy
+           execute( <<-SQL_COPY, nil)
+             CREATE TABLE #{table_name} AS
+               SELECT * FROM session.table_copy
+           SQL_COPY
+
+           #Add the Primary key back
+           execute( <<-SQL_COPY, nil)
+             ALTER TABLE #{table_name} ADD CONSTRAINT #{table_name[0..4]}_#{pk_col}_pk PRIMARY KEY (#{pk_col})
+           SQL_COPY
+
+           #Drop the GTT session.table_copy
+           execute( <<-SQL_COPY, nil)
+             DROP TABLE session.table_copy
+           SQL_COPY
+         end
 
          def add_column(table_name, column_name, type, options = {})
             complete_trace(" in add_column(#{table_name}, #{column_name}, #{type}, #{options}) ")
@@ -487,6 +543,16 @@ module ActiveRecord
             add_limit_offset!(sql,{:limit => 1})
             results = select(sql, name)
             results.first if results
+         end
+
+         def select_rows(sql, name = nil)
+            complete_trace(" in select_rows(#{sql}, #{name}) ")
+            result = select_all(sql, name)
+            rows = []
+            result.each do |row| 
+               rows << row.values_at("version")
+            end
+            rows
          end
 
          def insert(sql, name = nil, pk = nil, id_value = nil, sequence_name = nil) #:nodoc:
@@ -663,6 +729,16 @@ module ActiveRecord
 
          # SCHEMA STATEMENTS ========================================
 
+         # Create an Ingres database
+         def create_database(name, options = {})
+           #`createdb #{name} -i -fnofeclients`
+         end
+
+         # Drops an Ingres database
+         def drop_database(name) #:nodoc:
+           #`destroydb #{name}`
+         end
+
          # Return the list of all tables in the schema search path.
          def tables(name = nil) #:nodoc:
             complete_trace(" in tables(#{name}) ")
@@ -783,16 +859,22 @@ module ActiveRecord
                   column_name = column.values_at("column_name")[0]
 
                   # get a copy of the  primary index
-                  if (index_name.starts_with?("$pk")) then
-                     # we have the name of the pointer to the index
-                     # now let's fetch the actual name of the primary key
-                     sql2="select column_name from iiindex_columns where index_name='#{index_name}'"
-                     result_set_2 = execute_without_adding_ordering(sql2)
-                     @primary_key = result_set_2[0].fetch('column_name')
+                  # Ingres uses the first 5 characters of a table name for the primary key index
+                  if table_name.length < 5 then
+                    short_name = table_name
+                  else
+                    short_name = table_name[0..4]
+                  end
+                  if (index_name.starts_with?("$#{short_name}")) then
+                    # we have the name of the pointer to the index
+                    # now let's fetch the actual name of the primary key
+                    sql2="select column_name from iiindex_columns where index_name='#{index_name}'"
+                    result_set_2 = execute_without_adding_ordering(sql2)
+                    @primary_key = result_set_2[0].fetch('column_name')
                   end
 
                   # ignore any index with a $pk or ii prefix. It's a system index
-                  prefix1 = "$pk_"
+                  prefix1 = "$#{short_name}"
                   prefix2 = "ii"
                   if ( (index_name.starts_with?(prefix1)) || (index_name.starts_with?(prefix2)) ) then
                      #puts "\nSkipping #{index_name}\n"
